--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "test1",
   "version": "1.0.0",
   "description": "test p5 con node ",
-  "main": "app.js",
+  "main": "servidor/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
