--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "test p5 con node ",
   "main": "servidor/app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node servidor/app.js"
   },
   "author": "camilo posada",
   "license": "ISC",
